[gd_scene load_steps=15 format=2]

[ext_resource path="res://Bgart/Test.png" type="Texture" id=1]
[ext_resource path="res://Bgart/Great.png" type="Texture" id=2]
[ext_resource path="res://font/TestLink.tres" type="DynamicFontData" id=3]
[ext_resource path="res://Link_Test.gd" type="Script" id=4]
[ext_resource path="res://font/Link.tres" type="DynamicFontData" id=5]
[ext_resource path="res://sound/Chill.wav" type="AudioStream" id=6]
[ext_resource path="res://Mainmenubutton.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.392157, 0.27451, 0.713726, 1 )
border_width_left = 50
border_width_top = 50
border_width_right = 50
border_width_bottom = 50
border_color = Color( 0.611765, 0.717647, 1, 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://font/Superspace Bold ver 1.00.otf"

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://font/Superspace Regular ver 1.00 Slant.ttf"

[sub_resource type="DynamicFont" id=5]
size = 70
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 5 )

[node name="Link Test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = -26

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.0470588, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "แบบทดสอบความรู้"
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 1024.0
margin_bottom = 155.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "และแบบสอบถามความพึงพอใจ"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="QRtest" type="Sprite" parent="CanvasLayer/VBoxContainer"]
position = Vector2( 178, 255 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/VBoxContainer"]
position = Vector2( 178, 429 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Test" type="Label" parent="CanvasLayer"]
anchor_left = 0.295
anchor_top = 0.298
anchor_right = 0.809
anchor_bottom = 0.417
margin_left = -0.0800171
margin_top = 0.199997
margin_right = -0.416016
margin_bottom = -0.200012
custom_fonts/font = SubResource( 6 )
text = "สแกน QR code เพื่อทำแบบทดสอบองค์ความรู้เรื่อง
ระบบสุริยะหลังจากที่ได้เล่นมากันเถอะ!"
align = 1

[node name="Great" type="Label" parent="CanvasLayer"]
anchor_left = 0.301
anchor_top = 0.59
anchor_right = 0.824
anchor_bottom = 0.708
margin_left = -0.22403
margin_top = -3.05176e-05
margin_right = 0.223938
margin_bottom = 0.200012
custom_fonts/font = SubResource( 6 )
text = "อย่าลืมแบบสอบถามของเราด้วยนะ สแกน QR code 
เพื่อมาช่วยกันพัฒนาวิดีโอเกมให้ดียิ่งขึ้น!"
align = 1

[node name="LinkTest" type="LinkButton" parent="CanvasLayer"]
margin_left = 323.0
margin_top = 264.0
margin_right = 802.0
margin_bottom = 299.0
custom_colors/font_color = Color( 0.0431373, 0.898039, 0.878431, 1 )
custom_fonts/font = SubResource( 7 )
text = "https://forms.gle/tF8uqYyeAJbXR93WA"
underline = 1

[node name="LinkGreat" type="LinkButton" parent="CanvasLayer"]
margin_left = 324.0
margin_top = 444.0
margin_right = 803.0
margin_bottom = 479.0
custom_colors/font_color = Color( 0.0431373, 0.898039, 0.878431, 1 )
custom_fonts/font = SubResource( 7 )
text = "https://forms.gle/oPzFtmZsLV9xzoyz6"
underline = 1

[node name="Mainmenu" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="backgroundplayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="CanvasLayer/LinkTest" to="." method="_on_LinkTest_pressed"]
[connection signal="pressed" from="CanvasLayer/LinkGreat" to="." method="_on_LinkGreat_pressed"]
[connection signal="pressed" from="CanvasLayer/Mainmenu" to="." method="_on_Mainmenu_pressed"]
